Atualiza informações de formação e contato no currículo

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
     </button>
     <div class="folder-content hidden" id="formacao">
       <pre>
-ADS (2026–2028)
+Ciências da Computação (2026–2030)
 - lógica
 - bancos de dados
 - engenharia de software
 
-Lic. Matemática (2026–2030)
+Matemática (2026–2030)
 - raciocínio lógico
 - análise quantitativa
       </pre>
@@ -71,10 +71,10 @@ goal: learn structure without frameworks
     </div>
   </section>
   <section class="fs-node">
-    <button class="folder" data-target="skills">
+    <button class="folder" data-target="habilidades">
       📁 habilidades/
     </button>
-    <div class="folder-content hidden" id="skills">
+    <div class="folder-content hidden" id="habilidades">
       <ul>
         <li>Python</li>
         <li>Linux</li>
@@ -89,7 +89,7 @@ goal: learn structure without frameworks
     </button>
     <div class="folder-content hidden" id="contato">
 
-      <button class="file" data-link="mailto:seuemail@email.com">
+      <button class="file" data-link="mailto:mariaclaratrabalhos@proton.me">
         📄 email.exec
       </button>
 
